home.html updated

--- a/Skip_Prediction/templates/Home.html
+++ b/Skip_Prediction/templates/Home.html
@@ -70,9 +70,9 @@
 <br>
 </font></div>
 <div><font face="Trebuchet MS" style="color:white;" size="5">
-<br>AbdelrahmanAbdelghany<br>   
+<br>Abdelrahman Abdelghany<br>   
     Ramsha Kamran<br>
-    Younes<br>
+    Youness aithassoune<br>
 </font></div></div>
 </h3>
 </body>
