--- a/Skip_Prediction/templates/resultpage.html
+++ b/Skip_Prediction/templates/resultpage.html
@@ -44,7 +44,7 @@
     }  
 </style>  
 </head>
-<body  link="#000" style="background-image:url('{% static 'images/pn.jpg'%}'); background-repeat:no-repeat;background-size: cover;"alink="#017bf5" vlink="#000"></body>
+<body  link="#000" style="background-image:url('{% static 'images/green-gradient.png'%}'); background-repeat:no-repeat;background-size: cover;"alink="#017bf5" vlink="#000"></body>
 <br />
 <br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 <h1 align="center">
