--- a/Skip_Prediction/templates/Home.html
+++ b/Skip_Prediction/templates/Home.html
@@ -43,7 +43,7 @@
     }  
 </style>
 </head>
-<body  link="#000" style="background-image:url('{% static 'images/pn.jpg'%}'); background-repeat:no-repeat;background-size: cover;"alink="#017bf5" vlink="#000"></body>
+<body  link="#000" style="background-image:url('{% static 'images/green-gradient.png'%}'); background-repeat:no-repeat;background-size: cover;"alink="#017bf5" vlink="#000"></body>
 <br />
 <h3 align="center">
 
